hphp/test/slow/enum-invalid-base/mixed.php.expectf
Fatal error: Invalid base type for enum MyEnum in %s/slow/enum-invalid-base/mixed.php on line 3
